[package]
name = "py_rust_base64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_base64"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
base64 = "0.20.0"

[build-dependencies]
pyo3-build-config = "0.17.3"
